--- a/reservetonpain_site.html
+++ b/reservetonpain_site.html
@@ -72,6 +72,7 @@
 </head>
 <body>
   <h1>Réserve ton pain</h1>
+    <h2>Bienvenue chez X, veuillez passer commande</h2>
 
   <form id="commandeForm" action="https://formspree.io/f/mldearrq" method="POST" aria-label="Formulaire de réservation de pain">
     <div class="section">
